fixed lms layout bug

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -2482,3 +2482,7 @@ footer {
     margin-top: -30px;
   }
 }
+
+.content-top-lms {
+  margin-top: 10px;
+}
